--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,6 @@
 <h1>Welcome to pAIge</h1>
 <p>Create your stunning personal website with just one click!</p>
 <p class="lead">
-    <a href="about.html" class="btn btn-lg btn-secondary">Learn more</a>
+    <a href="{% url 'about' %}" class="btn btn-lg btn-secondary">Learn more</a>
 </p>
 {% endblock %}
