minor style changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block main %}
 <h1>Welcome to pAIge</h1>
-<p>Create your stunning personal website with just one click!</p>
+<p class="mb-4">Create your stunning personal website with just one click!</p>
 <p class="lead">
     <a href="{% url 'about' %}" class="btn btn-lg btn-secondary">Learn more</a>
 </p>
