--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
                         type="image/icon type"
                     />
                     <nav class="nav nav-masthead justify-content-center">
-                        <a class="nav-link" href="{% url 'index' %}">Home</a>
+                        <a class="nav-link active" href="{% url 'index' %}">Home</a>
                         <a class="nav-link" href="{% url 'about' %}">About</a>
                         <a class="nav-link" href="{% url 'generate' %}">Generate</a>
                     </nav>
