--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,7 @@
 
 
 
-<div class="row mt-5">
+<div class="row mt-5" style="margin-left: 5%;">
   <div class="col-lg-4 d-flex align-items-stretch">
     <div class="card" style="width: 18rem">
       <div class="card-body">
@@ -50,5 +50,8 @@
       </div>
     </div>
   </div>
+  <p class="lead">
+    <a href="{% url 'generate' %}" class="btn btn-lg btn-secondary" style="margin-top:25px;margin-right:3%;">Generate Now!</a>
+</p>
 </div>
 {% endblock %}
