--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
                 <div class="inner">
                     <link
                         rel="icon"
-                        href="pAIge_Logo.png"
+                        href="{% static 'images/pAIge_Logo.png' %}"
                         type="image/icon type"
                     />
                     <nav class="nav nav-masthead justify-content-center">
