improved openai integration

--- a/page/themes/ishan/templates/index.html
+++ b/page/themes/ishan/templates/index.html
@@ -111,7 +111,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <ul class="fa-ul mb-0">
-                        {% for sk in portfolio.portfolioskills.all %}
+                        {% for sk in portfolio.portfolioskill.all %}
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             {{sk.title}}
