--- a/page/themes/josh/templates/index.html
+++ b/page/themes/josh/templates/index.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load image %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -58,9 +59,7 @@
                                 <div class="profile bg-gradient-primary-to-secondary">
                                     <!-- TIP: For best results, use a photo with a transparent background like the demo example below-->
                                     <!-- Watch a tutorial on how to do this on YouTube (link)-->
-                                    {% if portfolio.profile_pic %}
-                                    <img class="profile-img" src="{{ portfolio.profile_pic.url }}" alt="..." />
-                                    {% endif %}
+                                    <img class="profile-img" src="{{ portfolio.profile_pic|pfpfb }}" alt="..." />
                                     <div class="dots-1">
                                         <!-- SVG Dots-->
                                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 191.6 1215.4" style="enable-background: new 0 0 191.6 1215.4" xml:space="preserve">
