--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 
 {% block main %}
-<image src="{% static 'images/pAIgenator_logo.png' %}" style="width: 80%; height: 80%; margin-bottom:25px; margin-top:-20%"></image>
+{% comment %} <image src="{% static 'images/pAIge_Logo.png' %}" style="width: 80%; height: 80%; margin-bottom:25px; margin-top:-20%"></image> {% endcomment %}
 <h1>Welcome to pAIgenator</h1>
 <p class="mb-4">Create a stunning personal website using your LinkedIn!</p>
 <p class="lead">
