--- a/page/themes/ishan/templates/index.html
+++ b/page/themes/ishan/templates/index.html
@@ -32,7 +32,7 @@
                     {% if portfolio.portfolioexperience %}<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li> {%endif%}
                     {% if portfolio.portfolioeducation %}<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li> {%endif%}
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    {% if portfolio.portfoliovolunteerwork%}<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#volunteering">Volunteering</a></li> {%endif%}
+                    <!-- {% if portfolio.portfoliovolunteerwork%}<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#volunteering">Volunteering</a></li> {%endif%} -->
                     {% if portfolio.portfoliohonoraward or portfolio.portfoliocertification%}<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li> {%endif%}
                 </ul>
             </div>
@@ -123,7 +123,7 @@
             
             {% if portfolio.portfoliovolunteerwork%}
             <hr class="m-0" />
-             <!-- Volunteering-->
+             <!-- Volunteering
              <section class="resume-section" id="volunteering">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Volunteering</h2>
@@ -142,7 +142,7 @@
                 </div>
             </section>
             <hr class="m-0" />
-            {% endif %}
+            {% endif %} -->
             {% if portfolio.portfoliohonoraward or portfolio.portfoliocertification%}
             <!-- Awards-->
             <section class="resume-section" id="awards">
