--- a/templates/base.html
+++ b/templates/base.html
@@ -17,10 +17,10 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'index' %}">
           <img
-            src="{% static 'images/pAIge_Logo.png' %}"
+            src="{% static 'images/pAIgenator_logo.png' %}"
             alt="pAIge logo"
-            width="60"
-            height="34"
+            width="80"
+            height="40"
           />
         </a>
         <button
