--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %} {% load static %} {% block main %}
 <h1 class="mb-5">How It Works:</h1>
-<hr style="color: #ffffff; background-color: #ffffff; height: 2px" />
 
 
 
-<div class="row mt-5" style="margin-left: 5%;">
+<div class="row mt-5">
   <div class="col-lg-4 d-flex align-items-stretch">
     <div class="card" style="width: 18rem">
       <div class="card-body">
@@ -51,7 +50,7 @@
     </div>
   </div>
   <p class="lead">
-    <a href="{% url 'generate' %}" class="btn btn-lg btn-secondary" style="margin-top:25px;margin-right:3%;">Generate Now!</a>
+    <a href="{% url 'generate' %}" class="btn btn-lg btn-secondary" style="margin-top:20px;">Generate Now!</a>
 </p>
 </div>
 {% endblock %}
