--- a/page/themes/josh/templates/index.html
+++ b/page/themes/josh/templates/index.html
@@ -30,7 +30,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                             <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="{% url 'experience' %}">Experience</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'experience' %}">Experience & Skills</a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'awards' %}">Awards</a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">Contact</a></li>
                         </ul>
