add preliminary portfolio edit view

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,9 +17,8 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'index' %}">
           <img
-            src="{% static 'images/pAIgenator_logo.png' %}"
+            src="{% static 'images/pAIge_light.png' %}"
             alt="pAIge logo"
-            width="80"
             height="40"
           />
         </a>
