--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 
 
 {% block main %}
-<image src="{% static 'images/pAIgenator_logo_dark.png' %}" style="width: 40%; height: 40%; margin-bottom:25px; margin-top:0px"></image>
-<h1>Welcome to pAIgenator</h1>
+<image src="{% static 'images/pAIge_dark.png' %}" style="width: 40%; height: 40%; margin-bottom:25px; margin-top:0px"></image>
+<h1>Welcome to paige</h1>
 <p class="mb-4">Create a stunning personal website using your LinkedIn!</p>
 <p class="lead">
     <a href="{% url 'about' %}" class="btn btn-lg btn-secondary">Learn more</a>
