--- a/templates/profile.html
+++ b/templates/profile.html
@@ -26,7 +26,7 @@
         </li>
       </ul>
       <div class="card-body">
-        <a href="#" class="btn btn-primary">Settings</a>
+        <a href="{% url 'portfolio_edit' portfolio.pk %}" class="btn btn-primary">Settings</a>
       </div>
     </div>
   </div>
