hide password reset view on login view

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -41,7 +41,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
   <button type="submit" class="primaryAction btn btn-primary">{% trans "Sign In" %}</button>
-  <a class="btn btn-link secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</button>
+  {% comment %} <a class="btn btn-link secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</button> {% endcomment %}
 </form>
 
 {% endblock %}
