Updated Landing Page
updated landing page, need to fix some formatting errors

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% load static %} {% block main %}
+{% extends 'base_archive.html' %} {% load static %} {% block main %}
 <h1 class="mb-5">How It Works:</h1>
 
 
