--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_archive.html' %}
 {% load static %}
 
 
@@ -9,4 +9,5 @@
 <p class="lead">
     <a href="{% url 'about' %}" class="btn btn-lg btn-secondary">Learn more</a>
 </p>
+
 {% endblock %}
