--- a/templates/base.html
+++ b/templates/base.html
@@ -1,141 +1,164 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="auto">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>pAIgenator: {% block head_title %}{{ title }}{% endblock%}</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body class="bg-light">
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4 shadow">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'index' %}">
-          <img
-            src="{% static 'images/pAIge_light.png' %}"
-            alt="pAIge logo"
-            height="40"
-          />
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarCollapse"
-          aria-controls="navbarCollapse"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav me-auto my-auto">
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                aria-current="page"
-                href="{% url 'index' %}"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'about' %}">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'generate' %}">
-                {% if user.is_authenticated %}
-                Generate a site
-                {% else %}
-                Get Started
-                {% endif %}
-              </a>
-            </li>
-          </ul>
-          <ul class="navbar-nav ms-auto my-auto me-2">
-            {% if user.is_authenticated %}
-            <li class="nav-item dropdown d-flex">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Signed in as {{ user.username }}
-              </a>
-              <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="{% url 'profile' %}"
-                    >My sites</a
-                  >
-                </li>
-                {% if user.is_staff %}
-                <li>
-                  <a class="dropdown-item" href="{% url 'admin:index' %}"
-                    >Admin</a
-                  >
-                </li>
-                {% endif%}
-                <li>
-                  <a class="dropdown-item" href="{% url 'account_logout' %}"
-                    >Sign Out</a
-                  >
-                </li>
-              </ul>
-            </li>
-            {% else %}
-            <li class="nav-item">
-              <div class="text-light">
-                <a
-                  class="font-weight-bold text-info link-offset-1"
-                  href="{% url 'account_signup' %}"
-                  >Sign Up</a
+        <title>pAIgenator: {% block head_title %}{{ title }}{% endblock %}</title>
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
+        <link href="{% static 'css/base.css' %}" rel="stylesheet">
+
+        <style>
+            body {
+            background-image: url("{% static 'images/Mountain_Background.jpg'%}");
+            background-repeat: no-repeat;
+            background-size: cover;
+            }
+        </style>
+
+        {% block head %}{% endblock %}
+    </head>
+    <body class="text-center">
+      <header>
+        <div class="container" style="position:relative; top:-300px;">
+          <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4 shadow rounded-5">
+              <div class="container-fluid">
+                <a class="navbar-brand" href="{% url 'index' %}">
+                  <img
+                    src="{% static 'images/pAIge_Logo.png' %}"
+                    alt="pAIge logo"
+                    width="80"
+                    height="40"
+                  />
+                </a>
+                <button
+                  class="navbar-toggler"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#navbarCollapse"
+                  aria-controls="navbarCollapse"
+                  aria-expanded="false"
+                  aria-label="Toggle navigation"
                 >
-                or
-                <a
-                  class="font-weight-bold text-info link-offset-1"
-                  href="{% url 'account_login' %}"
-                  >Sign In</a
-                >
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                  <ul class="navbar-nav me-auto my-auto">
+                    <li class="nav-item">
+                      <a
+                        class="nav-link"
+                        aria-current="page"
+                        href="{% url 'index' %}"
+                        >Home</a
+                      >
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="{% url 'about' %}">About</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="{% url 'generate' %}">
+                        {% if user.is_authenticated %}
+                        Generate a site
+                        {% else %}
+                        Get Started
+                        {% endif %}
+                      </a>
+                    </li>
+                  </ul>
+                  <ul class="navbar-nav ms-auto my-auto me-2">
+                    {% if user.is_authenticated %}
+                    <li class="nav-item dropdown d-flex">
+                      <a
+                        class="nav-link dropdown-toggle"
+                        href="#"
+                        role="button"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="false"
+                      >
+                        Signed in as {{ user.username }}
+                      </a>
+                      <ul class="dropdown-menu">
+                        <li>
+                          <a class="dropdown-item" href="{% url 'profile' %}"
+                            >My sites</a
+                          >
+                        </li>
+                        {% if user.is_staff %}
+                        <li>
+                          <a class="dropdown-item" href="{% url 'admin:index' %}"
+                            >Admin</a
+                          >
+                        </li>
+                        {% endif%}
+                        <li>
+                          <a class="dropdown-item" href="{% url 'account_logout' %}"
+                            >Sign Out</a
+                          >
+                        </li>
+                      </ul>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                      <div class="text-light">
+                        <a
+                          class="font-weight-bold text-info link-offset-1"
+                          href="{% url 'account_signup' %}"
+                          >Sign Up</a
+                        >
+                        or
+                        <a
+                          class="font-weight-bold text-info link-offset-1"
+                          href="{% url 'account_login' %}"
+                          >Sign In</a
+                        >
+                      </div>
+                    </li>
+                    {% endif %}
+                  </ul>
+                </div>
               </div>
-            </li>
-            {% endif %}
-          </ul>
-        </div>
-      </div>
-    </nav>
+            </nav>
+          </div>
 
-    <main class="container my-5">
-      <div class="mb-4">
-        {% if messages %} {% for message in messages %}
-        <div class="alert alert-dark alert-dismissible fade show" role="alert">
-          {{message}}
-          <button
-            type="button"
-            class="btn-close"
-            data-bs-dismiss="alert"
-            aria-label="Close"
-          ></button>
+          <main class="container my-5">
+            <div class="mb-4">
+              {% if messages %} {% for message in messages %}
+              <div class="alert alert-dark alert-dismissible fade show" role="alert">
+                {{message}}
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="alert"
+                  aria-label="Close"
+                ></button>
+              </div>
+              {% endfor %} {% endif %}
+            </div>
+          </main>
+      </header> 
+        <div class="container d-flex h-100 p-3 mx-auto flex-column">
+          
+          <div class="container">
+                <main role="main">
+                    {% block main %}
+                    {% endblock %}
+                    
+                </main>
+            </div>
+            
+            
+          
+            <!--
+            <footer class="bg-dark text-white text-center py-3">
+                &copy; 2023 pAIgenator - Ignition Hacks 2023
+            </footer>-->
         </div>
-        {% endfor %} {% endif %}
-      </div>
 
-      {% block main %} {% endblock %}
-    </main>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
-      integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
+    </body>
 </html>
