Fixed formatting issues
Fixed formatting issues in landing page.

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% load static %} {% block main %}
+{% extends 'base_archive.html' %} {% load static %} {% block main %}
 <h1>Your websites</h1>
 <hr />
 {% if portfolios %}
