--- a/templates/base_archive.html
+++ b/templates/base_archive.html
@@ -28,10 +28,10 @@
             <header class="masthead mb-auto">
                 <div class="inner">
                     <a href="{% url 'index' %}">
-                        <image src="{% static 'images/pAIge_Logo.png' %}" style="max-width: 7%; max-height: 7%; margin-right:75%;"></image>
+                        <image src="{% static 'images/pAIge_Logo.png' %}" style="max-width: 7%; max-height: 7%; margin-right:85%; margin-top:1%;"></image>
                     </link>
                     
-                    <nav class="nav nav-masthead justify-content-center" style="font-size:larger">
+                    <nav class="nav nav-masthead justify-content-center" style="font-size:larger; margin-top: -3%;">
                         <a class="nav-link" href="{% url 'index' %}">Home</a>
                         <a class="nav-link" href="{% url 'about' %}">About</a>
                         <a class="nav-link" href="{% url 'generate' %}">
@@ -42,13 +42,6 @@
                             {% endif %}
                         </a>
                         {% if user.is_authenticated %}
-                        <a
-                        class="nav-link"
-                        href="#"
-                        role="button"
-                      >
-                        Signed in as {{ user.username }}
-                      </a>
                       <a class="nav-link" href="{% url 'profile' %}"
                           >My sites</a>
                           {% if user.is_staff %}
@@ -60,13 +53,20 @@
                         <a class="nav-link" href="{% url 'account_logout' %}"
                         >Sign Out</a
                       >
+                      <a
+                        class="nav-link"
+                        href="#"
+                        role="button"
+                      >
+                        Signed in as <i>{{ user.username }}</i>
+                      </a>
                       {% else %}
                       <a
                           class="nav-link"
                           href="{% url 'account_signup' %}"
                           >Sign Up</a
                         >
-                        or
+                        <text class="nav-link">or</text>
                         <a
                           class="nav-link"
                           href="{% url 'account_login' %}"
