--- a/templates/portfolio_edit.html
+++ b/templates/portfolio_edit.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% load static %} {% load crispy_forms_tags %} {% block main %}
+{% extends 'base_archive.html' %} {% load static %} {% load crispy_forms_tags %} {% block main %}
 <h1>Edit portfolio {{ portfolio.site.domain }}</h1>
 <hr />
 {% crispy form %}
